--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -22,7 +22,7 @@ jobs:
       if: ${{ startsWith(github.repository, 'devonfw/') && github.ref == 'refs/heads/master' }}
       continue-on-error: true
       environment:
-        name: production
+        name: maven-central
       outputs:
         release_tag: ${{ steps.get_tag.outputs.tag }}
       steps:        
@@ -107,7 +107,7 @@ jobs:
     needs: release
     runs-on: ubuntu-latest
     environment:
-      name: devonfw.com
+      name: devonfw-guide
     if: ${{ startsWith(github.repository, 'devonfw/') && github.ref == 'refs/heads/master' && startsWith(needs.release.outputs.release_tag, 'release') }}
     steps:
       - name: Clone Repository
