--- a/pom.xml
+++ b/pom.xml
@@ -377,9 +377,9 @@
             <version>1.6.8</version>
             <extensions>true</extensions>
             <configuration>
-              <serverId>ossrh</serverId>
-              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-              <autoReleaseAfterClose>false</autoReleaseAfterClose>
+              <serverId>repository</serverId>
+              <nexusUrl>${maven.release.repository}</nexusUrl>
+              <autoReleaseAfterClose>true</autoReleaseAfterClose>
               <autoDropAfterRelease>false</autoDropAfterRelease>
               <description>Release ${project.groupId}:${project.artifactId}.${project.version}</description>
               <skipNexusStagingDeployMojo>${maven.deploy.skip}</skipNexusStagingDeployMojo>
