--- a/pom.xml
+++ b/pom.xml
@@ -378,7 +378,7 @@
             <extensions>true</extensions>
             <configuration>
               <serverId>repository</serverId>
-              <nexusUrl>${maven.release.repository}</nexusUrl>
+              <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
               <autoReleaseAfterClose>true</autoReleaseAfterClose>
               <autoDropAfterRelease>false</autoDropAfterRelease>
               <description>Release ${project.groupId}:${project.artifactId}.${project.version}</description>
